@@ -24,7 +24,7 @@
 # Arguments:
 # w -           Frame for buttons.
 # pos -         top, bottom ...
-# default -     Index of button that is to display the default ring
+# default -     Index of the button to be displayed with the default ring
 #               (-1 means none).
 # args -        One or more strings to display in buttons across the
 #               bottom of the dialog box.
